# rllm

./: .gitignore  G8_LIVE_STRATEGY_AND_NO_TRADE_AUDIT.md  LLM_IMPLEMENTATION_GUIDE.md  README.md  config.py  main.py  pyproject.toml  utils.py
data/: economic_chosen_sft_h36_72_144_288_432_oos.jsonl  economic_chosen_sft_h36_72_144_288_432_val.jsonl  rex_event_choice_label_sft_eval_20260712.jsonl  rex_event_choice_label_sft_test_20260712.jsonl  rex_event_reasoning_action_only_sft_eval_20260712.jsonl  rex_event_reasoning_action_only_sft_test_20260712.jsonl  rex_event_reasoning_policy_sft_eval_20260712.jsonl  rex_event_reasoning_policy_sft_test_20260712.jsonl  side_preference_h144_t1p8_s1p5_diff0p05.summary.json  side_preference_h144_t1p8_s1p5_diff0p05_all.jsonl  side_preference_h144_t1p8_s1p5_diff0p05_eval.jsonl  side_preference_h144_t1p8_s1p5_diff0p05_train.jsonl  side_preference_h144_t1p8_s1p5_diff0p05_val.jsonl  stable_trader_policy_h144_t1p8_s1p5.summary.json  stable_trader_policy_h144_t1p8_s1p5_all.jsonl  stable_trader_policy_h144_t1p8_s1p5_eval.jsonl  stable_trader_policy_h144_t1p8_s1p5_split.summary.json  stable_trader_policy_h144_t1p8_s1p5_split_gate.jsonl  stable_trader_policy_h144_t1p8_s1p5_split_gate_eval.jsonl  stable_trader_policy_h144_t1p8_s1p5_split_gate_train.jsonl  stable_trader_policy_h144_t1p8_s1p5_split_gate_val.jsonl  stable_trader_policy_h144_t1p8_s1p5_split_side.jsonl  stable_trader_policy_h144_t1p8_s1p5_split_side_eval.jsonl  stable_trader_policy_h144_t1p8_s1p5_split_side_train.jsonl  stable_trader_policy_h144_t1p8_s1p5_split_side_val.jsonl  (+11 more)
(+3177 files in other folders)
