[project]
name = "rllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.10"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.4.1",
    "gymnasium>=0.29.1",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "peft>=0.18.1",
    "pillow>=10.0.0",
    "python-binance>=1.0.32",
    "stable-baselines3>=2.5.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1,<5",
    "trl>=0.29.0",
]
