[project]
name = "rllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.10"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
    "chronos-forecasting==2.3.1",
    "datasets>=4.4.1",
    "gymnasium>=0.29.1",
    "matplotlib>=3.8.0",
    "momentfm",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "peft>=0.18.1",
    "pillow>=10.0.0",
    "protobuf>=7.34.1",
    "python-binance>=1.0.32",
    "sentencepiece>=0.2.1",
    "stable-baselines3>=2.5.0",
    "tabicl==2.1.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1,<5",
    "trl>=0.29.0",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }
momentfm = { git = "https://github.com/moment-timeseries-foundation-model/moment.git", rev = "38f7310ad594100747ca2a8357e9c7ca7d323e0e" }
